monitoring/cb-ingress-grafana.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: cb-cert-manager-letsencrypt-prod
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
  name: cb-ingress-grafana
spec:
  rules:
  - host: grafana.eks-dev.cryptobirds.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prom-stack-grafana
            port:
              number: 3000
  tls: # < placing a host in the TLS config will determine what ends up in the cert's subjectAltNames
  - hosts:
    - grafana.eks-dev.cryptobirds.com
    secretName: cb-ingress-cert-grafana
