monitoring/cb-ingress-prometheus.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: cb-cert-manager-letsencrypt-prod
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: basic-auth
    nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required - CB Internal Tools'
  name: cb-ingress-prometheus
spec:
  rules:
  - host: prometheus.eks-dev.cryptobirds.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prom-stack-kube-prometheus-prometheus
            port:
              number: 9090
  tls: # < placing a host in the TLS config will determine what ends up in the cert's subjectAltNames
  - hosts:
    - prometheus.eks-dev.cryptobirds.com
    secretName: cb-ingress-cert-prometheus
